# epaper_xkcd

./: README.rst  pyproject.toml
src/: epaper_xkcd.py
