[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name = "epaper_xkcd"
version = "0.1"
authors = [
    {name="Imam Usmani"},
]
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
description = "display xkcd webcomics on epaper"
dependencies = [
]

[project.optional-dependencies]
dev = [
	'pytest',
	'flake8',
	'ipython',
	'sphinx',
	'build',
	'twine',
	'sphinx-rtd-theme'
]

[project.urls]
"Source Code" = "https://github.com/ImamAzim/epaper_xkcd"
"Documentation" = "https://epaper_xkcd.readthedocs.io/en/latest/index.html"
